fixed font size and line spacing for text in 'info' section

--- a/src/styles/pages/home/home.module.scss
+++ b/src/styles/pages/home/home.module.scss
@@ -45,13 +45,15 @@
     
     background-color: var(--color-beige);
     color: var(--text-black);
+    font-size: 24px;
+    line-height: 40px;
+
+    padding: 0px 40px;
 
     h1 {
         padding: 16px 32px;
         color: var(--color-maroon);
-    }
-    p {
-        padding-bottom: 32px;
+        font-size: 40px;
     }
     
     width: calc(8px * 117);
@@ -59,26 +61,28 @@
     
 }
 
-.visit {
+.visit { // section with icons and contact info/addreass
     display: flex;
-    width: 100%;
+    width: 80%;
+    padding-top: 32px;
     justify-content: space-evenly;
     color: var(--color-maroon);
+    font-size: 32px;
 }
 
-.row_icons {
+.row_icons { // styling of icon + "contact info"
     display: flex;
-    // justify-content: space-around;
-    // align-items: center;
-    // border: solid black 1px;
+    gap: 16px;
 }
 
-.contact {
+.contact { // divides lower "visit us" section into two sections. This is left section (phone # and "message")
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    gap: 22px;
 }
 
-.dates { // This is to style lower two cards; make them flex basis and row
+.dates { // This is to style lower two cards
     display: flex;
     width: 100%;
     justify-content: space-around;
@@ -95,14 +99,16 @@
     color: var(--text-black);
 
     h1 {
-        padding: 16px 32px;
+        padding: 16px 32px 32px 32px;
         color: var(--color-maroon);
+        font-size: 40px;
     }
     ul {
         list-style-type: none;
     }
     li {
         margin-bottom: var(--edge-spacer);
+        font-size: 24px;
     }
 
     width: calc(8px * 45);
@@ -120,14 +126,16 @@
     color: var(--text-black);
     
     h1 {
-        padding: 16px 32px;
+        padding: 16px 32px 32px 32px;
         color: var(--color-maroon);
+        font-size: 40px;
     }
     ul {
         list-style-type: none;
     }
     li {
         margin-bottom: var(--edge-spacer);
+        font-size: 24px;
     }
 
     width: calc(8px * 128);
@@ -149,9 +157,9 @@
     border-radius: 50%;
     background-color: var(--color-gold);
     color: var(--color-maroon);
-    width: 60px;
-    height: 60px;
-    font-size: 2.5rem;
+    width: 56px;
+    height: 56px;
+    font-size: 2.0rem;
     
     text-decoration: none;
     transition: margin 0.2s ease-in-out;
@@ -162,6 +170,3 @@
     box-shadow: 0 0 8px var(--color-maroon);
     text-shadow: 0 0 8px var(--color-maroon);
 }
-
-
-
